0.0.22
Added check for installed manpageeditor, if succeeds menu item added in file menu.
Code clean.
Undo bugfix.

0.0.21
Added 'Split View' to tab menu, click once to split, again to un-split.
'Live Search' is now always case insensitive.
Removed 'dirty' flag from buffer when first opening as hexdump.
Added configure and associated files to archive so no longer needs auto-tools.
Updated 'INSTALL' file for Debian/fedora users.
Added drop down for syntax highlighting.
Added 'New Editor' to file menu.
Added 'New Admin Editor' to file menu.
Updated help file.
Fixed 'close tab' bug'
Code clean.
Now allow's pipes in external tool command.

0.0.20
Added (optional) support for Aspell.
Added 'Check Spelling' to popup menu when word selected.
Added 'Spell Check Document' to document tab menu.
'Cancel' while spell checking document now cancels entire action.
Updated 'Help'.

0.0.19
Added 'Live Search' to toolbar, 'Enter' -> find next,'Shift' -> find prev.
Added show/hide entry boxes on toolbar to prefs.

0.0.18
Added command line switch (-m) to override the single instance pref ( used for running an extra version via the tools menu etc ).
Added drag 'n' drop to insert text file into text when dropped on text part of window;
Added drag 'm' drop text between windows/applications.

0.0.17
Handles files with spaces in their names properly.
Added get mime type via external command if glib fails.
Code clean.
Fixed segfault on filename with spaces in certain circumstances.

0.0.16
Added Recent File menu.
Added multiple select to file open.
Added 'Show in Pop Up' option to external tools GUI.
Files opened on commandline/dnd etc now get added to recent items.

0.0.15
Save/restore bookmarks with session, if the files change on disk after saving session, restoring will skew bookmarks.
Added "Close All Tabs" to file menu.
Close all tabs BEFORE restoring session.
Dimmed Nav, func and bookmark menus when no docs open.
Dimmed saveall, close etc when no docs open.