@@ -1,1 +1,0 @@
-Put your Pixmaps in this folder
